AM_CPPFLAGS= -fPIC 

AM_LDFLAGS=-lc -lm -lrt -lpthread

noinst_LIBRARIES=libcommon.a
libcommon_a_SOURCES = \
	m_serialization.cpp				m_serialization.h \
	m_tree_node.cpp					m_tree_node.h \
	m_data_type.cpp					m_data_type.h \
	m_thread_pool.cpp             m_thread_pool.h \
	m_synchronize.cpp					m_synchronize.h \
	m_smart_ptr.cpp					m_smart_ptr.h \
	m_circle_queue.cpp				m_circle_queue.h \
	m_task.cpp							m_task.h \
	m_affinitizer.cpp					m_affinitizer.h
