AM_CPPFLAGS= -fPIC 

AM_LDFLAGS=-lc -lm -lrt -lpthread

noinst_LIBRARIES=libtest_common.a
libtest_common_a_SOURCES = \
	m_affinitizer_test.cpp \
	m_circle_queue_test.cpp \
	m_data_type_test.cpp \
	m_serialization_test.cpp \
	m_smart_ptr_test.cpp \
	m_synchronize_test.cpp \
	m_task_test.cpp \
	m_thread_pool_test.cpp \
	m_tree_node_test.cpp \
	m_trees_test.cpp
