AM_CPPFLAGS= -fPIC \
-I/home/Casa/Works/tools/Theron-5.01.01/Include

AM_LDFLAGS=-lc -lm -lrt -lpthread -lx

noinst_LIBRARIES=libtest_common.a
libtest_common_a_SOURCES = \
	m_affinitizer_test.cpp \
	m_circle_queue_test.cpp \
	m_data_type_test.cpp \
	m_serialization_test.cpp \
	m_smart_ptr_test.cpp \
	m_synchronize_test.cpp \
	m_task_test.cpp \
	m_thread_pool_test.cpp \
	m_tree_node_test.cpp \
	m_trees_test.cpp \
	m_buffer_test.cpp \
	m_configuration_test.cpp \
	m_schema_test.cpp \
	m_merger_test.cpp \
	m_sender_test.cpp \
	m_ahandler_test.cpp \
	m_rb_tree_test.cpp
